# homelab

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs
crates/networking/: Cargo.toml
crates/networking/src/: error.rs  hardware_address.rs  host.rs  lib.rs
crates/networking/src/wol/: mod.rs  password.rs
