[package]
name = "homelab-cli"
version = "0.1.0"
authors = ["Will Dixon <will@willd.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
directories = "3.0"
homelab_networking = { path = "../networking", features = ["deserialize"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.10"
toml = "0.5"
