[package]
name = "homelab-daemon"
version = "0.1.0"
authors = ["Will Dixon <will@willd.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
log = "0.4"
simplelog = "0.10"
tonic = "0.4"
