[package]
name = "homelab_networking"
version = "0.1.0"
authors = ["Will Dixon <will@willd.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true}
thiserror = "1.0"
trust-dns-resolver = "0.20"

[features]
default = []
serialize = ["serde"]
deserialize = ["serde"]
